# LegalHealthCheck

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  Update-LegalHealthUsers.ps1  package-lock.json  package.json  payload.json
.github/workflows/: ci.yml  frontend-ci.yml
backend/: .env.example  README.md  legalhealth.db  package-lock.json  pyproject.toml  requirements.txt
backend/app/: config.py  core.py  main.py  main.py.20251001_215017.bak  models.py
backend/app.egg-info/: SOURCES.txt
backend/app/api/: auth.py  checkup.py  documents.py
backend/app/api/v1/endpoints/: alerts.py  audit.py  auth.py  checkup_results.py  documents.py  export.py  schema.py
backend/app/api/v1/endpoints/schemas/: audit.py  common.py  documents.py
backend/app/api/v1/endpoints/services/: audit_service.py
backend/app/auth/: routes.py  routes.py.20251001_215017.bak
backend/app/core/: config.py  files.py  security.py
backend/app/db/: crud.py  database.py  models.py  schemas.py
backend/app/schemas/: auth.py  checkup.py  documents.json  documents.py
backend/app/services/: audit_service.py
backend/legalhealthcheck_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/integration/: test_checkup.py
data/: users.json
data/auth/: users.json
data/checkup/: questions.json
data/documents/: documents.json
data/results/anonymous/: 20251011T121225Z.json
data/templates/: regulamin_sklepu.txt
docs/: syncing-local-changes.md
frontend/: .eslintrc.cjs  README.md  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.test.jsx  http.js  main.jsx
frontend/src/__tests__/: Checkup.test.jsx  Documents.test.jsx
frontend/src/api/: auth.js  checkup.js  client.js  documents.js  export.js  http.js  me.js  results.js  templates.js
frontend/src/auth/: AuthContext.jsx  ProtectedRoute.jsx  PublicOnlyRoute.jsx
frontend/src/components/: Loader.jsx  NavBar.jsx
frontend/src/pages/: Alerts.jsx  Checkup.jsx  Dashboard.jsx  Documents.jsx  Home.jsx  Login.jsx  Register.jsx  Results.jsx
tools/: bootstrap-clean-repo.ps1  cleanup.ps1  report.ps1
